--- a/requirements.txt
+++ b/requirements.txt
@@ -16,15 +16,22 @@ google-pasta==0.2.0
 grpcio==1.68.1
 h5py==3.12.1
 idna==3.10
+imbalanced-learn==0.12.4
+imblearn==0.0
 ipykernel==6.29.5
+ipympl==0.9.4
 ipython==8.30.0
+ipython-genutils==0.2.0
+ipywidgets==8.1.5
 jedi==0.19.2
 joblib==1.4.2
 jupyter_client==8.6.3
 jupyter_core==5.7.2
+jupyterlab_widgets==3.0.13
 keras==3.7.0
 kiwisolver==1.4.7
 libclang==18.1.1
+llvmlite==0.43.0
 Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
@@ -32,8 +39,10 @@ matplotlib==3.9.3
 matplotlib-inline==0.1.7
 mdurl==0.1.2
 ml-dtypes==0.4.1
+mlxtend==0.23.3
 namex==0.0.8
 nest-asyncio==1.6.0
+numba==0.60.0
 numpy==2.0.2
 nvidia-cublas-cu12==12.5.3.2
 nvidia-cuda-cupti-cu12==12.5.82
@@ -61,7 +70,11 @@ psutil==6.1.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
 Pygments==2.18.0
+pynndescent==0.5.13
 pyparsing==3.2.0
+PyQt6==6.7.1
+PyQt6-Qt6==6.7.3
+PyQt6_sip==13.8.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
 pyzmq==26.2.0
@@ -71,6 +84,7 @@ scikit-learn==1.5.2
 scipy==1.14.1
 seaborn==0.13.2
 six==1.16.0
+skfeature-chappers==1.1.0
 stack-data==0.6.3
 tensorboard==2.18.0
 tensorboard-data-server==0.7.2
@@ -79,10 +93,13 @@ tensorflow-io-gcs-filesystem==0.37.1
 termcolor==2.5.0
 threadpoolctl==3.5.0
 tornado==6.4.2
+tqdm==4.67.1
 traitlets==5.14.3
 typing_extensions==4.12.2
 tzdata==2024.2
+umap-learn==0.5.7
 urllib3==2.2.3
 wcwidth==0.2.13
 Werkzeug==3.1.3
+widgetsnbextension==4.0.13
 wrapt==1.17.0
