--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ debugpy==1.8.9
 decorator==5.1.1
 executing==2.1.0
 flatbuffers==24.3.25
-fonttools==4.55.0
+fonttools==4.55.2
 gast==0.6.0
 google-pasta==0.2.0
 grpcio==1.68.1
@@ -38,12 +38,24 @@ MarkupSafe==3.0.2
 matplotlib==3.9.3
 matplotlib-inline==0.1.7
 mdurl==0.1.2
-ml-dtypes==0.4.1
+ml_dtypes==0.5.0
 mlxtend==0.23.3
 namex==0.0.8
 nest-asyncio==1.6.0
 numba==0.60.0
-numpy==2.0.2
+numpy==2.2.0
+nvidia-cublas-cu12==12.6.4.1
+nvidia-cuda-cupti-cu12==12.6.80
+nvidia-cuda-nvcc-cu12==12.6.85
+nvidia-cuda-nvrtc-cu12==12.6.85
+nvidia-cuda-runtime-cu12==12.6.77
+nvidia-cudnn-cu12==9.6.0.74
+nvidia-cufft-cu12==11.3.0.4
+nvidia-curand-cu12==10.3.7.77
+nvidia-cusolver-cu12==11.7.1.2
+nvidia-cusparse-cu12==12.5.4.2
+nvidia-nccl-cu12==2.23.4
+nvidia-nvjitlink-cu12==12.6.85
 opt_einsum==3.4.0
 optree==0.13.1
 packaging==24.2
@@ -51,9 +63,10 @@ pandas==2.2.3
 parso==0.8.4
 pexpect==4.9.0
 pillow==11.0.0
+pip-review==1.3.0
 platformdirs==4.3.6
 prompt_toolkit==3.0.48
-protobuf==5.29.0
+protobuf==5.29.1
 psutil==6.1.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
@@ -61,17 +74,17 @@ Pygments==2.18.0
 pynndescent==0.5.13
 pyparsing==3.2.0
 PyQt6==6.7.1
-PyQt6-Qt6==6.7.3
-PyQt6_sip==13.8.0
+PyQt6-Qt6==6.8.1
+PyQt6_sip==13.9.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
 pyzmq==26.2.0
 requests==2.32.3
 rich==13.9.4
-scikit-learn==1.5.2
+scikit-learn==1.6.0
 scipy==1.14.1
 seaborn==0.13.2
-six==1.16.0
+six==1.17.0
 skfeature-chappers==1.1.0
 stack-data==0.6.3
 tensorboard==2.18.0
