--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
-faults.csv
-.tf_venv/
-.ctgan_venv/
-.tabnet_venv/
+tf_venv/
+ctgan_venv/
+tabnet_venv/
 steel_plates copy.ipynb
-balanced_normalized_steel_plates.csv
 logs/
 incompleto/
