--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 # Python version == 3.8.20
 absl-py==2.1.0
+alembic==1.14.1
 anyio==4.5.2
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
@@ -13,18 +14,25 @@ backcall==0.2.0
 beautifulsoup4==4.13.3
 bleach==6.1.0
 blinker==1.8.2
+boto3==1.37.2
+botocore==1.37.2
 cachetools==5.5.1
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
+cloudpickle==3.1.1
+colorlog==6.9.0
 comm==0.2.2
 contourpy==1.1.1
+copulas==0.12.1
 ctgan==0.10.2
 cycler==0.12.1
 debugpy==1.8.12
 decorator==5.1.1
+deepecho==0.7.0
 defusedxml==0.7.1
+dython==0.7.3
 exceptiongroup==1.2.2
 executing==2.2.0
 extension==1.0.0
@@ -40,6 +48,8 @@ gast==0.4.0
 google-auth==2.38.0
 google-auth-oauthlib==1.0.0
 google-pasta==0.2.0
+graphviz==0.20.3
+greenlet==3.1.1
 grpcio==1.70.0
 h11==0.14.0
 h5py==3.11.0
@@ -57,6 +67,7 @@ isoduration==20.11.0
 itsdangerous==2.2.0
 jedi==0.19.2
 Jinja2==3.1.5
+jmespath==1.0.1
 joblib==1.4.2
 json5==0.10.0
 jsonpointer==3.0.0
@@ -75,15 +86,19 @@ jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.13
 keras==2.13.1
+keras-tuner==1.4.7
 kiwisolver==1.4.7
+kt-legacy==1.0.5
 libclang==18.1.1
 llvmlite==0.41.1
+Mako==1.3.9
 Markdown==3.7
 MarkupSafe==2.1.5
 matplotlib==3.7.5
 matplotlib-inline==0.1.7
 mistune==3.1.1
 mpmath==1.3.0
+narwhals==1.28.0
 nbclient==0.10.1
 nbconvert==7.16.6
 nbformat==5.10.4
@@ -107,6 +122,8 @@ nvidia-nvjitlink-cu12==12.8.61
 nvidia-nvtx-cu12==12.1.105
 oauthlib==3.2.2
 opt_einsum==3.4.0
+optuna==4.2.1
+optuna-integration==4.2.1
 overrides==7.7.0
 packaging==24.2
 pandas==2.0.3
@@ -117,6 +134,7 @@ pickleshare==0.7.5
 pillow==10.4.0
 pkgutil_resolve_name==1.3.10
 platformdirs==4.3.6
+plotly==6.0.0
 prometheus_client==0.21.1
 prompt_toolkit==3.0.50
 protobuf==4.25.6
@@ -129,6 +147,16 @@ pycparser==2.22
 Pygments==2.19.1
 pynndescent==0.5.13
 pyparsing==3.1.4
+PyQt5==5.15.11
+PyQt5-Qt5==5.15.16
+PyQt5_sip==12.15.0
+PyQt6==6.7.1
+PyQt6-Qt6==6.7.3
+PyQt6_sip==13.8.0
+PySide2==5.15.2.1
+PySide6==6.6.3.1
+PySide6_Addons==6.6.3.1
+PySide6_Essentials==6.6.3.1
 python-dateutil==2.9.0.post0
 python-json-logger==3.2.1
 pytorch-tabnet==4.1.0
@@ -144,15 +172,23 @@ rfc3986-validator==0.1.1
 rpds-py==0.20.1
 rsa==4.9
 rtdl_revisiting_models==0.0.2
+s3transfer==0.11.3
 scikit-learn==1.3.2
+scikit-plot==0.3.7
 scipy==1.10.1
+sdmetrics==0.19.0
+sdv==1.18.0
 seaborn==0.13.2
 Send2Trash==1.8.3
+shiboken2==5.15.2.1
+shiboken6==6.6.3.1
 six==1.17.0
 sniffio==1.3.1
 soupsieve==2.6
+SQLAlchemy==2.0.24
 stack-data==0.6.3
 sympy==1.13.3
+table-evaluator==1.6.1
 tensorboard==2.13.0
 tensorboard-data-server==0.7.2
 tensorflow==2.13.1
@@ -170,12 +206,11 @@ traitlets==5.14.3
 triton==3.0.0
 types-python-dateutil==2.9.0.20241206
 typing==3.7.4.3
-typing_extensions==4.12.2
+typing_extensions==4.5.0
 tzdata==2025.1
-umap==0.1.1
 umap-learn==0.5.7
 uri-template==1.3.0
-urllib3==2.2.3
+urllib3==1.26.20
 wcwidth==0.2.13
 webcolors==24.8.0
 webencodings==0.5.1
@@ -184,5 +219,3 @@ Werkzeug==3.0.6
 widgetsnbextension==4.0.13
 wrapt==1.17.2
 zipp==3.20.2
-
-keras-tuner~=1.4.7
